Add Square 2, Edit Square 1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>CSS Patterns</title>
 </head>
 <body>
-	<div id='square1'></div>
+	<div id='square1' class='square'></div>
+	<div id='square2' class='square'></div>
 </body>
 </html>
