Remove Square 2, Add Square 3

--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html lang='en'>
 <head>
 	<meta charset='utf-8' />
-	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
+	<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 	<link rel='stylesheet' type='text/css' href='main.min.css' />
 	<script src='jquery.min.js'></script>
 	<script src='main.js'></script>
 	<title>CSS Patterns</title>
 </head>
 <body>
-	<div id='square1' class='square'></div>
-	<div id='square2' class='square'></div>
+	<div class='body-row'>
+		<div id='square1' class='square'></div>
+		<div id='square2' class='square'></div>
+		<div id='square3' class='square'></div>
+	</div>
+
+	<div class='body-row'>
+		<div id='square4' class='square'></div>
+		<div id='square5' class='square'></div>
+		<div id='square6' class='square'></div>
+	</div>
+
+	<div class='body-row'>
+		<div id='square7' class='square'></div>
+		<div id='square8' class='square'></div>
+		<div id='square9' class='square'></div>
+	</div>
 </body>
 </html>
