--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 	<title>CSS Patterns</title>
 </head>
 <body>
-	<div id='leftarrow' class='arrow'><h1><</h1></div>
-	<div id='container'>
+	<div class='body-row'>
 		<div id='square1' class='square'></div>
 		<div id='square2' class='square'></div>
 		<div id='square3' class='square'></div>
-		<div id='square4' class='square'></div>
 	</div>
-	<div id='rightarrow' class='arrow'><h1>></h1></div>
+	<div class='body-row'>
+		<div id='square4' class='square'></div>
+		<div id='square5' class='square'></div>
+		<div id='square6' class='square'></div>
+	</div>
+	<div class='body-row'>
+		<div id='square7' class='square'></div>
+		<div id='square8' class='square'></div>
+		<div id='square9' class='square'></div>
+	</div>
 </body>
 </html>
