--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 	<link rel='stylesheet' type='text/css' href='main.min.css' />
 	<script src='jquery.min.js'></script>
+	<script src='row1.js'></script>
+	<script src='row2.js'></script>
+	<script src='row3.js'></script>
 	<script src='main.js'></script>
 	<title>CSS Patterns</title>
 </head>
