Start Working on Slider

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>CSS Patterns</title>
 </head>
 <body>
-	<div class='body-row'>
+	<!-- <div class='body-row'>
 		<div id='square1' class='square'></div>
 		<div id='square2' class='square'></div>
 		<div id='square3' class='square'></div>
@@ -26,6 +26,23 @@
 		<div id='square7' class='square'></div>
 		<div id='square8' class='square'></div>
 		<div id='square9' class='square'></div>
+	</div> -->
+
+	<div id='viewbox'>
+			<div id='square1' class='square'></div>
+			<div id='square2' class='square'></div>
+			<div id='square3' class='square'></div>
+			<div id='square4' class='square'></div>
+		</div>
+	</div>
+
+	<div id='controls'>
+		<div id='leftarrow'>
+			<p>&lt;</p>
+		</div>
+		<div id='rightarrow'>
+			<p>&gt;</p>
+		</div>
 	</div>
 </body>
 </html>
