--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	</div> -->
 
 	<div id='viewbox'>
+		<div id='slider'>
 			<div id='square1' class='square'></div>
 			<div id='square2' class='square'></div>
 			<div id='square3' class='square'></div>
