Finish Mobile Version

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<title>CSS Patterns</title>
 </head>
 <body>
+
 	<div id='viewbox'>
 		<div id='slider'>
 			<div id='square1' class='square'></div>
@@ -25,6 +26,7 @@
 			<div id='square9' class='square'></div>
 		</div>
 	</div>
+
 	<div id='controls'>
 		<div id='leftarrow'>
 			<p>&lt;</p>
@@ -33,5 +35,17 @@
 			<p>&gt;</p>
 		</div>
 	</div>
+
+	<!--
+	<div id='square1' class='square'></div>
+	<div id='square2' class='square'></div>
+	<div id='square3' class='square'></div>
+	<div id='square4' class='square'></div>
+	<div id='square5' class='square'></div>
+	<div id='square6' class='square'></div>
+	<div id='square7' class='square'></div>
+	<div id='square8' class='square'></div>
+	<div id='square9' class='square'></div>
+	-->
 </body>
 </html>
