--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src='row2.js'></script>
 	<script src='row3.js'></script>
 	<script src='main.js'></script>
-	<title>CSS Patterns</title>
+	<title>CSS Animations</title>
 </head>
 <body>
 
